--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="assets/logo.png" alt="Think Media Logo" class="logo">
     <h1>Think Media</h1>
     <nav>
       <a href="home.html">Home</a>
