--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="assets/logo.png" alt="Think Media Logo" class="logo">
     <h1>Think Media</h1>
     <nav>
       <a href="home.html">Home</a>
@@ -21,9 +22,9 @@
     <h2>Our Services</h2>
     <ul>
       <li><strong>Photography</strong> — Events, portraits, branding, lifestyle.</li>
-      <li><strong>Videography</strong> —  ads, documentaries, reels.</li>
+      <li><strong>Videography</strong> — Music videos, ads, documentaries, reels.</li>
       <li><strong>PR & Content Creation</strong> — Social media content, brand storytelling, digital campaigns.</li>
-      <li><strong>Editing</strong> —  color grading, sound design.</li>
+      <li><strong>Editing</strong> — Professional video editing, color grading, sound design.</li>
     </ul>
   </section>
 
